--- a/apps/server/.swcrc
+++ b/apps/server/.swcrc
@@ -1,9 +1,15 @@
 {
 	"jsc": {
 		"parser": {
-			"syntax": "typescript"
+			"syntax": "typescript",
+			"decorators": true
 		},
-		"target": "es2022"
+		"target": "es2022",
+		"transform": {
+			"legacyDecorator": true,
+			"decoratorMetadata": true
+		},
+		"keepClassNames": true
 	},
 	"module": {
 		"type": "commonjs"
