--- a/apps/cloner/package.json
+++ b/apps/cloner/package.json
@@ -11,6 +11,7 @@
 	"license": "GPL-3.0",
 	"dependencies": {
 		"dotenv": "^16.0.3",
+		"node": "workspace:*",
 		"node-opcua": "^2.87.0",
 		"typia": "^3.4.15"
 	},
