--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,7 +13,7 @@
 		"dotenv": "^16.0.3",
 		"node": "workspace:^0.1.0",
 		"node-opcua": "^2.87.0",
-		"typia": "^3.4.15"
+		"parser": "workspace:^0.2.0"
 	},
 	"devDependencies": {
 		"@swc/cli": "^0.1.57",
@@ -21,7 +21,6 @@
 		"@trivago/prettier-plugin-sort-imports": "^4.0.0",
 		"@types/node": "^18.11.17",
 		"prettier": "^2.8.1",
-		"ttypescript": "^1.5.15",
 		"typescript": "^4.9.4"
 	}
 }
