--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -1,22 +1,23 @@
 {
 	"name": "parser",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"description": "parse JSON-serialized OPC UA server structure",
 	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"scripts": {
-		"start": "node ./dist/index.js",
-		"build": "swc ./src -d ./dist"
+		"build": "ttsc"
 	},
 	"author": "Abiria <abiria.dev@gmail.com>",
 	"license": "GPL-3.0",
 	"dependencies": {
-		"@types/node": "^18.11.17",
-		"typescript": "^4.9.4",
+		"node": "workspace:^0.1.0",
 		"typia": "^3.4.15"
 	},
 	"devDependencies": {
-		"@swc/cli": "^0.1.57",
-		"@swc/core": "^1.3.24",
-		"ttypescript": "^1.5.15"
+		"@trivago/prettier-plugin-sort-imports": "^4.0.0",
+		"@types/node": "^18.11.17",
+		"prettier": "^2.8.1",
+		"ttypescript": "^1.5.15",
+		"typescript": "^4.9.4"
 	}
 }
