--- a/apps/cloner/package.json
+++ b/apps/cloner/package.json
@@ -12,17 +12,15 @@
 	"dependencies": {
 		"dotenv": "^16.0.3",
 		"node": "workspace:*",
-		"node-opcua": "^2.87.0",
-		"typia": "^3.4.15"
+		"node-opcua": "^2.88.0",
+		"parser": "workspace:^0.3.0"
 	},
 	"devDependencies": {
-		"@swc/cli": "^0.1.57",
+		"@swc/cli": "^0.1.59",
 		"@swc/core": "^1.3.24",
 		"@trivago/prettier-plugin-sort-imports": "^4.0.0",
-		"@types/node": "^18.11.17",
+		"@types/node": "^18.11.18",
 		"prettier": "^2.8.1",
-		"ts-node": "^10.9.1",
-		"ttypescript": "^1.5.15",
 		"typescript": "^4.9.4",
 		"xo": "^0.53.1"
 	}
