--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,15 +11,14 @@
 	"license": "GPL-3.0",
 	"dependencies": {
 		"dotenv": "^16.0.3",
-		"node": "workspace:^0.1.0",
-		"node-opcua": "^2.87.0",
-		"parser": "workspace:^0.3.0"
+		"node": "workspace:^0.2.0",
+		"node-opcua": "^2.88.0"
 	},
 	"devDependencies": {
-		"@swc/cli": "^0.1.57",
-		"@swc/core": "^1.3.24",
+		"@swc/cli": "^0.1.59",
+		"@swc/core": "^1.3.25",
 		"@trivago/prettier-plugin-sort-imports": "^4.0.0",
-		"@types/node": "^18.11.17",
+		"@types/node": "^18.11.18",
 		"prettier": "^2.8.1",
 		"typescript": "^4.9.4"
 	}
