--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "node",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"description": "shared node type for serialize / deserialize OPC UA tree structure",
-	"main": "dist/node.js",
-	"types": "dist/node.d.ts",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"scripts": {
 		"build": "tsc"
 	},
