fix: clear node import issue

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -12,7 +12,8 @@
 	"dependencies": {
 		"dotenv": "^16.0.3",
 		"node": "workspace:^0.2.0",
-		"node-opcua": "^2.88.0"
+		"node-opcua": "^2.88.0",
+		"parser": "workspace:^0.4.0"
 	},
 	"devDependencies": {
 		"@swc/cli": "^0.1.59",
