--- a/apps/cloner/package.json
+++ b/apps/cloner/package.json
@@ -11,8 +11,9 @@
 	"license": "GPL-3.0",
 	"dependencies": {
 		"dotenv": "^16.0.3",
-		"node": "workspace:^0.2.0",
-		"node-opcua": "^2.88.0"
+		"node": "workspace:^0.2.1",
+		"node-opcua": "^2.88.0",
+		"parser": "workspace:^0.4.0"
 	},
 	"devDependencies": {
 		"@swc/cli": "^0.1.59",
