--- a/apps/server/.prettierrc
+++ b/apps/server/.prettierrc
@@ -1,37 +1,1 @@
-{
-	"printWidth": 60,
-	"tabWidth": 4,
-	"useTabs": true,
-	"semi": false,
-	"singleQuote": true,
-	"trailingComma": "all",
-	"arrowParens": "avoid",
-	"proseWrap": "always",
-	"htmlWhitespaceSensitivity": "ignore",
-	"endOfLine": "lf",
-	"overrides": [
-		{
-			"files": ["*.yaml", "*.yml"],
-			"options": {
-				"tabWidth": 2
-			}
-		},
-		{
-			"files": ".swcrc",
-			"options": {
-				"parser": "json",
-				"tabWidth": 4
-			}
-		}
-	],
-	"plugins": ["@trivago/prettier-plugin-sort-imports"],
-	"importOrder": [
-		"^\\w+:(.*)$",
-		"^@(.*)$",
-		"<THIRD_PARTY_MODULES>",
-		"^[./]"
-	],
-	"importOrderSeparation": true,
-	"importOrderSortSpecifiers": true,
-	"importOrderGroupNamespaceSpecifiers": true
-}
+"prettierrc/.prettierrc-import-plugin.cjs"
