--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,23 +4,31 @@
 	"description": "server implementation",
 	"main": "dist/index.js",
 	"scripts": {
-		"start": "node ./dist/index.js",
-		"build": "swc ./src -d ./dist"
+		"build": "swc ./src -d ./dist",
+		"build:tsc": "tsc",
+		"format": "prettier . -w",
+		"lint": "xo",
+		"lint:fix": "xo --fix",
+		"start": "node ./dist/index.js"
 	},
 	"author": "Abiria <abiria.dev@gmail.com>",
 	"license": "GPL-3.0",
 	"dependencies": {
 		"dotenv": "^16.0.3",
-		"node": "workspace:^0.3.0",
+		"node": "workspace:^0.4.0",
 		"node-opcua": "^2.88.0",
-		"parser": "workspace:^0.5.0"
+		"parser": "workspace:^0.6.0"
 	},
 	"devDependencies": {
 		"@swc/cli": "^0.1.59",
 		"@swc/core": "^1.3.25",
 		"@trivago/prettier-plugin-sort-imports": "^4.0.0",
 		"@types/node": "^18.11.18",
-		"prettier": "^2.8.1",
-		"typescript": "^4.9.4"
+		"eslint-config-custom": "workspace:^0.1.0",
+		"prettier": "^2.8.2",
+		"prettierrc": "workspace:^0.1.0",
+		"tsconfig": "workspace:^0.1.0",
+		"typescript": "^4.9.4",
+		"xo": "^0.53.1"
 	}
 }
