--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -1,22 +1,29 @@
 {
 	"name": "parser",
-	"version": "0.5.0",
+	"version": "0.6.0",
 	"description": "parse JSON-serialized OPC UA server structure",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"build": "ttsc"
+		"build": "ttsc",
+		"format": "prettier . -w",
+		"lint": "xo",
+		"lint:fix": "xo --fix"
 	},
 	"author": "Abiria <abiria.dev@gmail.com>",
 	"license": "GPL-3.0",
 	"dependencies": {
-		"node": "workspace:^0.3.0",
-		"typia": "^3.4.18"
+		"node": "workspace:^0.4.0",
+		"typia": "^3.4.20"
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.0.0",
-		"prettier": "^2.8.1",
+		"eslint-config-custom": "workspace:^0.1.0",
+		"prettier": "^2.8.2",
+		"prettierrc": "workspace:^0.1.0",
+		"tsconfig": "workspace:^0.1.0",
 		"ttypescript": "^1.5.15",
-		"typescript": "^4.9.4"
+		"typescript": "^4.9.4",
+		"xo": "^0.53.1"
 	}
 }
