--- a/packages/parser/tsconfig.json
+++ b/packages/parser/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"extends": "tsconfig/tsconfig.json",
 	"compilerOptions": {
-		"skipLibCheck": true,
+		"outDir": "dist",
 		"plugins": [
 			{
 				"transform": "typia/lib/transform"
