--- a/packages/server-api/package.json
+++ b/packages/server-api/package.json
@@ -1,25 +1,21 @@
 {
-	"name": "server",
+	"name": "server-api",
 	"version": "0.1.0",
-	"description": "server implementation",
+	"description": "reusable mock server api",
 	"main": "dist/index.js",
 	"scripts": {
-		"build": "swc ./src -d ./dist",
-		"build:tsc": "tsc",
 		"format": "prettier . -w",
 		"lint": "xo",
 		"lint:fix": "xo --fix",
-		"start": "node ./dist/index.js"
+		"build": "tsc"
 	},
+	"keywords": [
+		"server",
+		"OPC UA",
+		"mock server"
+	],
 	"author": "Abiria <abiria.dev@gmail.com>",
-	"license": "GPL-3.0",
-	"dependencies": {
-		"dotenv": "^16.0.3",
-		"node": "workspace:^0.4.0",
-		"node-opcua": "^2.88.0",
-		"parser": "workspace:^0.6.0",
-		"server-api": "workspace:^0.1.0"
-	},
+	"license": "ISC",
 	"devDependencies": {
 		"@swc/cli": "^0.1.59",
 		"@swc/core": "^1.3.25",
@@ -31,5 +27,11 @@
 		"tsconfig": "workspace:^0.1.0",
 		"typescript": "^4.9.4",
 		"xo": "^0.53.1"
+	},
+	"dependencies": {
+		"dotenv": "^16.0.3",
+		"node": "workspace:^0.4.0",
+		"node-opcua": "^2.88.0",
+		"parser": "workspace:^0.6.0"
 	}
 }
