--- a/packages/node/.xo-config.json
+++ b/packages/node/.xo-config.json
@@ -1,5 +1,8 @@
 {
 	"root": true,
 	"extends": ["custom"],
-	"prettier": true
+	"prettier": true,
+	"rules": {
+		"no-warning-comments": "off"
+	}
 }
