--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "node",
-	"version": "0.4.0",
+	"version": "0.5.0",
 	"description": "shared node type for serialize / deserialize OPC UA tree structure",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -20,5 +20,8 @@
 		"tsconfig": "workspace:^0.1.0",
 		"typescript": "^4.9.4",
 		"xo": "^0.53.1"
+	},
+	"dependencies": {
+		"node-opcua": "^2.88.0"
 	}
 }
