feat: extract shared code into utils workspace

--- a/apps/cloner/package.json
+++ b/apps/cloner/package.json
@@ -15,9 +15,10 @@
 	"license": "GPL-3.0",
 	"dependencies": {
 		"dotenv": "^16.0.3",
-		"node": "workspace:^0.4.0",
+		"node": "workspace:^0.7.0",
 		"node-opcua": "^2.88.0",
-		"parser": "workspace:^0.6.0"
+		"parser": "workspace:^0.8.0",
+		"utils": "workspace:^0.1.0"
 	},
 	"devDependencies": {
 		"@swc/cli": "^0.1.59",
