--- a/packages/server-api/package.json
+++ b/packages/server-api/package.json
@@ -18,7 +18,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@swc/cli": "^0.1.59",
-		"@swc/core": "^1.3.25",
+		"@swc/core": "^1.3.26",
 		"@trivago/prettier-plugin-sort-imports": "^4.0.0",
 		"@types/node": "^18.11.18",
 		"eslint-config-custom": "workspace:^0.1.0",
@@ -30,8 +30,9 @@
 	},
 	"dependencies": {
 		"dotenv": "^16.0.3",
-		"node": "workspace:^0.4.0",
+		"node": "workspace:^0.7.0",
 		"node-opcua": "^2.88.0",
-		"parser": "workspace:^0.6.0"
+		"parser": "workspace:^0.8.0",
+		"utils": "workspace:^0.1.0"
 	}
 }
