--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,28 +1,22 @@
 {
-	"name": "server",
+	"name": "utils",
 	"version": "0.1.0",
-	"description": "server implementation",
+	"description": "utilities to deal with OPC UA components",
 	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"scripts": {
-		"build": "swc ./src -d ./dist",
-		"build:tsc": "tsc",
 		"format": "prettier . -w",
 		"lint": "xo",
 		"lint:fix": "xo --fix",
-		"start": "node ./dist/index.js"
+		"build": "tsc"
 	},
+	"keywords": [
+		"OPC UA",
+		"utilities"
+	],
 	"author": "Abiria <abiria.dev@gmail.com>",
-	"license": "GPL-3.0",
-	"dependencies": {
-		"node": "workspace:^0.7.0",
-		"node-opcua": "^2.88.0",
-		"parser": "workspace:^0.8.0",
-		"server-api": "workspace:^0.1.0",
-		"utils": "workspace:^0.1.0"
-	},
+	"license": "ISC",
 	"devDependencies": {
-		"@swc/cli": "^0.1.59",
-		"@swc/core": "^1.3.26",
 		"@trivago/prettier-plugin-sort-imports": "^4.0.0",
 		"@types/node": "^18.11.18",
 		"eslint-config-custom": "workspace:^0.1.0",
@@ -31,5 +25,9 @@
 		"tsconfig": "workspace:^0.1.0",
 		"typescript": "^4.9.4",
 		"xo": "^0.53.1"
+	},
+	"dependencies": {
+		"node": "workspace:^0.7.0",
+		"node-opcua": "^2.88.0"
 	}
 }
