--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -6,6 +6,7 @@
 	"types": "dist/index.d.ts",
 	"scripts": {
 		"build": "ttsc",
+		"clean": "rm -rf dist",
 		"format": "prettier . -w",
 		"lint": "xo",
 		"lint:fix": "xo --fix"
