--- a/packages/node/.xo-config.json
+++ b/packages/node/.xo-config.json
@@ -1,8 +1,5 @@
 {
 	"root": true,
 	"extends": ["custom"],
-	"prettier": true,
-	"rules": {
-		"no-warning-comments": "off"
-	}
+	"prettier": true
 }
