--- a/packages/utils/.xo-config.json
+++ b/packages/utils/.xo-config.json
@@ -1,9 +1,5 @@
 {
 	"root": true,
 	"extends": ["custom"],
-	"prettier": true,
-	"rules": {
-		"unicorn/no-array-callback-reference": "off",
-		"@typescript-eslint/restrict-template-expressions": "off"
-	}
+	"prettier": true
 }
